--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,13 @@
-.tablecontainer {
+body {
   width: 100vw;
-  height: 100vh;
+  height: calc(100vh - 50px);
+  background-color: rgb(212, 209, 209);
 }
 
 .container {
   margin: 0 auto;
+}
+
+.header {
+  margin-top: 50px;
 }
